--- a/index.css
+++ b/index.css
@@ -1,3 +1,41 @@
-#heading {
-    color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo {
+  width: 100px;
+  height: 100px;
+}
+.nav-items {
+  padding: 0px 20px;
+}
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
+  cursor: pointer;
+}
+.res-card:hover {
+  border: 1px solid black;
+}
+.search {
+  padding: 10px;
+}
+.res-logo {
+  width: 100%;
+  height: 100px;
 }
